# swsh-mega-redux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
config/: VersionList.sym  config.cmake
data/: maple_mono.hkf
include/: battle_system.hpp  battle_ui.hpp  effect_sequence.hpp  mega_evolution.hpp  personal_info.hpp
include/enum/: Ability.hpp  Species.hpp  Type.hpp
include/filesystem/: FileHandler.hpp
include/gui/: ExtendedRenderer.hpp  InputManager.hpp  hooks.hpp
include/hook/: InlineHook.hpp  MainOffset.hpp
include/nn/: hid_detail.h
include/orion/: CMakeLists.txt
include/orion/battle/: ActionHandler.hpp  BattleHandler.hpp  BattleResult.hpp  BattleSetupSpec.hpp  ChoiceHandler.hpp  EffectSequenceHandler.hpp  EventHandler.hpp  Move.hpp  Party.hpp
include/orion/battle/ui/: BattleUI.hpp  MoveUI.hpp
include/orion/capture/: LevelCap.hpp
include/orion/evolution/: Data.hpp
include/orion/field/: AreaLoader.hpp  BattleStateManager.hpp  EventManager.hpp  FieldManager.hpp  FieldObject.hpp  FileCache.hpp  Party.hpp  PokeInfo.hpp  SystemManager.hpp
include/orion/field/encounter/: EventEncounterManager.hpp  FishingStateManager.hpp  GiftEncounterManager.hpp  OverworldEncounterManager.hpp
include/orion/filesystem/: GFFile.hpp
include/orion/graphics/: FinalizeRenderer.hpp
include/orion/learn/: Data.hpp
include/orion/movie/: BSeqHandler.hpp
include/orion/options/: OptionsHolder.hpp
include/orion/pawn/: Pawn.hpp  amx.h
include/orion/personal/: PersonalInfo.hpp
include/orion/save/: MiscBlock.hpp  MyItem.hpp  SaveManager.hpp
include/orion/schemas/field/: FieldObjects.fbs
include/orion/schemas/field/encounter/: GiftEncounter.fbs
include/orion/schemas/shop/: ShopInventory.fbs
include/orion/shop/: ShopManager.hpp
include/orion/string/: HashedString.hpp
include/orion/trainer/: Data.hpp
include/util/: FNV.hpp  Personal.hpp  Reflection.hpp
src/: main.cpp
src/filesystem/: FileHandler.cpp
src/gui/: InputManager.cpp  hooks.cpp
syms/nn/: fs.sym  hid.sym  main.sym
syms/orion/battle/: BattleHandler.sym  BattleResult.sym  BattleSetupSpec.sym  ChoiceHandler.sym  EffectSequenceHandler.sym  EventHandler.sym  Move.sym  Party.sym  PokeInfo.sym
syms/orion/capture/: LevelCap.sym
syms/orion/evolution/: Data.sym
syms/orion/field/: AreaLoader.sym  BattleStateManager.sym  EventManager.sym  FieldManager.sym  FieldObject.sym  FileCache.sym  SystemManager.sym
syms/orion/filesystem/: GFFile.sym
syms/orion/graphics/: FinalizeRenderer.sym
syms/orion/learn/: Learnset.sym
syms/orion/movie/: BSeqHandler.sym
syms/orion/options/: OptionsHolder.sym
syms/orion/pawn/: Pawn.sym
syms/orion/personal/: PersonalInfo.sym
syms/orion/save/: MiscBlock.sym  SaveManager.sym
syms/orion/shop/: ShopManager.sym
syms/orion/trainer/: Data.sym
(+6 files in other folders)
